2007-07-26  haytjes  <hv1989@gmail.com>

	* src/awn-bar.c: (render):
	Fixes the positions of the separators

2007-07-26  haytjes  <hv1989@gmail.com>

	* src/awn-bar.c: (render_rect), (glass_engine), (pattern_engine),
	(render):
	* src/awn-task.c: (draw):
	Fixes the look of the bar (icon_offset + bar_angle = 0)
	Fixes the internal hi-lightborder
	Calculates the extra width of the bar (instead of taking 40px)
	Fixes the color of the horizontal bar

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* src/awn-task.c: (launch_hover_effect), (_task_fade_out_effect),
	(launch_fade_out_effect), (_task_fade_in_effect),
	(launch_fade_in_effect), (awn_task_proximity_in),
	(awn_task_proximity_out), (awn_task_win_enter_out):
	Fixes the fade effect.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* applets/notification-area/eggtraymanager.c:
	(egg_tray_manager_get_child_title):
	Fixes string signedness issue in notification-are applet.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* src/awn-title.c: (render):
	Fixes a memory leak when hovering over icons.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* applets/switcher/applet.c:
	Fixes a translation issue in Switcher applet.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* src/awn-task.c: (_task_wnck_icon_changed),
	(awn_task_update_icon), (awn_task_set_width),
	(awn_task_set_custom_icon), (awn_task_unset_custom_icon),
	(_task_choose_custom_icon):
	Fixes reflection related memory leaks in awn-task.c.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* applets/trash/trashapplet.c: (trash_applet_destroy),
	(update_icons), (draw):
	* applets/trash/trashapplet.h:
	Trashapplet loads the reflection only when the icon updates.

2007-07-26  Miika-Petteri Matikainen  <miikapetteri@gmail.com>

	* src/awn-task.c: (_task_destroy):
	Fixes a memory leak in _task_destroy.

2007-07-15  Neil J. Patel  <njpatel@gmail.com>
